# VanessaAI

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  tmp_out.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_conversation_context.py  003_message_telegram_id.py  004_global_message_context.py  005_user_nickname.py
app/: __init__.py
app/api/: auth.py  container.py  deps.py  main.py  middleware.py
app/bot/: addressing.py  container.py  main.py  telegram_format.py
app/config/: content.py  conversation_config.py  settings.py
app/core/: __init__.py  chat_session_state.py  logging_setup.py  messages.py  nicknames.py  protocols.py  request_context.py  session_trim.py  turn.py
app/db/: __init__.py  models.py  (+4 more)
config/: content.yaml  nicknames.yaml  nicknames.yaml.example
scripts/: backfill_users.py  import_telegram_history.py
tests/: conftest.py  test_architecture_phase.py  test_content.py  test_context_window.py  test_decision_engine.py  test_display_names.py  test_generation_config.py  test_humor_quotes.py  test_hybrid_search.py  test_local_embeddings.py  test_merger.py  test_message_indexing.py  test_orchestrator.py  test_planner_gate.py  test_prefilter.py  test_profanity_substitution.py  test_query_rewriter.py  test_rag_text.py  test_rag_window_budget.py  test_react_retriever.py  test_reply_expectation.py  test_reply_format.py  test_search_plan.py  test_session_format.py  test_session_trim.py  test_telegram_format.py  test_turn_planner.py  test_user_backfill.py
(+146 files in other folders)
