[tool.poetry]
name = "vanessa"
version = "0.1.0"
description = "Telegram bot Vanessa with RAG and Claude Opus"
authors = ["Vanessa Team"]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = ">=0.115.0"
uvicorn = { version = ">=0.32.0", extras = ["standard"] }
aiogram = ">=3.15.0"
sqlalchemy = { version = ">=2.0.36", extras = ["asyncio"] }
asyncpg = ">=0.30.0"
alembic = ">=1.14.0"
qdrant-client = ">=1.12.0"
sentence-transformers = ">=3.3.0"
torch = { version = ">=2.4,<3", source = "pytorch-cpu" }
anthropic = ">=0.40.0"
pydantic-settings = ">=2.6.0"
httpx = ">=0.28.0"
python-dotenv = ">=1.0.1"
pyyaml = ">=6.0.2"
pymorphy3 = "^2.0.6"

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.3.0"
pytest-asyncio = ">=0.24.0"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
